--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -128,6 +128,28 @@ $http({
     }
 });
 
+
+
+$scope.checkNetworkFlapping = function(hostName) {
+
+
+
+$http({
+        url: baseURL+'/events/network-flapping',
+        method: "GET"
+    })
+    .then(function(response) {
+
+
+
+            $scope.responseMsg = response.data;
+			alert('Event generated!');
+
+    });
+    }
+});
+
+
 </script>
 
 
@@ -259,6 +281,17 @@ $http({
 						<div class="col-sm-10">
 
 							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatusDiskUsage('check-disk-usage');">Status</button>
+
+
+						</div>
+					</div>
+
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label" >Disk Check</label>
+						<div class="col-sm-10">
+
+							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatusDiskUsage('check-network-flapping');">Status</button>
 
 
 						</div>
