--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -288,10 +288,10 @@ $http({
 
 
 					<div class="form-group">
-						<label class="col-sm-2 control-label" >Disk Check</label>
+						<label class="col-sm-2 control-label" >Network Flapping</label>
 						<div class="col-sm-10">
 
-							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatusDiskUsage('check-network-flapping');">Status</button>
+							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkNetworkFlapping('check-network-flapping');">Status</button>
 
 
 						</div>
