--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -146,6 +146,23 @@ $http({
 
     });
     }
+$scope.checkBlackHoleHost = function(hostName) {
+
+
+
+$http({
+        url: baseURL+'/events/blackhole-host',
+        method: "GET"
+    })
+    .then(function(response) {
+
+
+
+            $scope.responseMsg = response.data;
+			alert('Event generated!');
+
+    });
+    }
 });
 
 
@@ -291,6 +308,16 @@ $http({
 						<div class="col-sm-10">
 
 							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkNetworkFlapping('check-network-flapping');">Status</button>
+
+
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label" >Blackhole Host</label>
+						<div class="col-sm-10">
+
+							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkBlackholeHost('check-blackhole-host');">Status</button>
 
 
 						</div>
