added nw events

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -286,7 +286,7 @@ $http({
 						<label class="col-sm-2 control-label" >Sudo Bug</label>
 						<div class="col-sm-10">
 
-							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatus('check-sudo-bug');">Status</button>
+							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatus('check-sudo-bug');">Initiate</button>
 
 
 						</div>
@@ -296,7 +296,7 @@ $http({
 						<label class="col-sm-2 control-label" >Disk Check</label>
 						<div class="col-sm-10">
 
-							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatusDiskUsage('check-disk-usage');">Status</button>
+							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkStatusDiskUsage('check-disk-usage');">Initiate</button>
 
 
 						</div>
@@ -307,7 +307,7 @@ $http({
 						<label class="col-sm-2 control-label" >Network Flapping</label>
 						<div class="col-sm-10">
 
-							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkNetworkFlapping('check-network-flapping');">Status</button>
+							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkNetworkFlapping('check-network-flapping');">Initiate</button>
 
 
 						</div>
@@ -317,7 +317,7 @@ $http({
 						<label class="col-sm-2 control-label" >Blackhole Host</label>
 						<div class="col-sm-10">
 
-							<button id="check1"  type="button" class="btn btn-primary" style="align:center" ng-click="checkBlackholeHost('check-blackhole-host');">Status</button>
+							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkBlackholeHost('check-blackhole-host');">Initiate</button>
 
 
 						</div>
