--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -146,12 +146,31 @@ $http({
 
     });
     }
+
 $scope.checkBlackHoleHost = function(hostName) {
 alert("hi");
 
 
 $http({
         url: baseURL+'/events/blackhole-host',
+        method: "GET"
+    })
+    .then(function(response) {
+
+
+
+            $scope.responseMsg = response.data;
+			alert('Event generated!');
+
+    });
+    }
+
+    $scope.checkCdpRemediate = function(hostName) {
+
+
+
+$http({
+        url: baseURL+'/events/cdp-remediate',
         method: "GET"
     })
     .then(function(response) {
@@ -318,6 +337,16 @@ $http({
 						<div class="col-sm-10">
 
 							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkBlackholeHost('check-blackhole-host');">Initiate</button>
+
+
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label" >CDP interface check</label>
+						<div class="col-sm-10">
+
+							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkCdpRemediate('check-cdp-remediate');">Initiate</button>
 
 
 						</div>
