--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -182,6 +182,24 @@ $http({
 
     });
     }
+
+    $scope.blackholehost = function(hostName) {
+
+
+
+$http({
+        url: baseURL+'/events/blackhole-host',
+        method: "GET"
+    })
+    .then(function(response) {
+
+
+
+            $scope.responseMsg = response.data;
+			alert('Event generated!');
+
+    });
+    }
 });
 
 
@@ -332,21 +350,24 @@ $http({
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-sm-2 control-label" >Blackhole Host</label>
-						<div class="col-sm-10">
 
-							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkBlackholeHost('check-blackhole-host');">Initiate</button>
-
-
-						</div>
-					</div>
 
 					<div class="form-group">
 						<label class="col-sm-2 control-label" >CDP interface check</label>
 						<div class="col-sm-10">
 
 							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="checkCdpRemediate('check-cdp-remediate');">Initiate</button>
+
+
+						</div>
+					</div>
+
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label" >Blackhole Host</label>
+						<div class="col-sm-10">
+
+							<button id="check"  type="button" class="btn btn-primary" style="align:center" ng-click="blackholehost('check-blackhole-host');">Initiate</button>
 
 
 						</div>
